<resources>
    <string name="app_name">CS 527 - RDS &amp; MySQL</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">History</string>
    <string name="title_notifications">Notifications</string>
    <string name="Speech_Text">Speech to text</string>
    <string name="sql_input_text"> Type SQL Query Here</string>
    <string name="sql_output_text"> SQL Output Here</string>
    <string name="sql_button_text">Execute Query</string>
    <string name="rds_mysql_text">RDS(MySQL)</string>
    <string name="redshift_text">Redshift</string>
    <string name="reset_button_text">Reset</string>
    <string name="choose_database_string">Choose a Database:</string>
    <string name="username_input_text">Enter username</string>
    <string name="password_input_text">Enter password</string>
    <string name="access_key_input_text">Enter access key</string>
    <string name="secret_key_input_text">Enter secret key</string>
    <string name="connect_failed_message">Connection Failed!</string>
    <string name="connect_button_text">Connect</string>
    <string name="clear_button_text">Clear</string>

</resources>