<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <EditText
        android:id="@+id/rds_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:autofillHints="username"
        android:hint="@string/username_input_text"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/rds_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints="password"
        android:hint="@string/password_input_text"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintTop_toBottomOf="@+id/rds_username"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/connect_fail_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Connection failed!"
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/connectButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rds_password"
        app:layout_constraintVertical_bias="0.487" />

    <Button
        android:id="@+id/connectButton"
        android:layout_width="137dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/connect_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rds_password"
        app:layout_constraintVertical_bias="0.046" />

</androidx.constraintlayout.widget.ConstraintLayout>